# fabseapps_iced

./: README.md
.woodpecker/: build_push.yml
manga_reader/: .gitignore  Cargo.toml
manga_reader/.cargo/: config.toml
manga_reader/src/: main.rs
new/: Cargo.toml  README.md
new/.cargo/: config.toml
new/src/: main.rs
old/fabseeditor/: Cargo.toml
old/fabseeditor/src/: main.rs
old/fabsemangareader/: Cargo.toml  README.md
old/fabsemangareader/.cargo/: config.toml
old/fabsemangareader/src/: main.rs
text_editor/: Cargo.toml  README.md
text_editor/.cargo/: config.toml
text_editor/src/: main.rs
