[package]
version = "0.0.1"
edition = "2021"
name = "Fabsemangaka"
authors = ["Fabian Grant Petrus"]
description = "A cross-platform manga reader with support for external sources"
repository = "https://codeberg.org/fabseman/fabseapps_iced"
license = "AGPL-3.0-or-later"

[dependencies]
iced = { version = "0", features = ["advanced", "canvas", "debug", "highlighter", "image", "tokio"] }
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
rfd = { version = "0", default-features = false, features = ["tokio", "xdg-portal"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = true
