[package]
version = "0.0.1"
edition = "2021"
name = "fabseeditor"
authors = ["Fabian Grant Petrus"]
description = "A rudimentary text-editor with syntax-highlighting"
repository = "https://codeberg.org/fabseman/fabseapp_iced"
license = "AGPL-3.0-or-later"

[dependencies]
iced = { version = "0", features = ["debug", "highlighter", "tokio"] }
rfd = { version = "0", default-features = false, features = ["tokio", "xdg-portal"] }
tokio = { version = "1", features = ["fs"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = true
