[package]
name = "fabseeditor"
edition = "2021"
version = "0.0.2"
authors = ["Fabian Grant Petrus"]
description = "A rudimentary text-editor with syntax-highlighting"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/fabseman/fabseapps_iced"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "debug", "highlighter", "tokio"] }
rfd = { version = "0", default-features = false, features = ["tokio", "xdg-portal"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
